--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -6,9 +6,9 @@
         "args": { 
             "PathApp": "${containerWorkspaceFolder}",
             "NugetMode": "SKIP",
-            "UserApp": "${localEnv:USER}",
-            "UserUID": "1000",
-            "UserGID": "1000",
+            // "UserApp": "${localEnv:USER}",
+            // "UserUID": "1000",
+            // "UserGID": "1000",
             "HttpProxyEnv": "${localEnv:HTTP_PROXY}",
             "HttpsProxyEnv": "${localEnv:HTTPS_PROXY}",
             "NoProxyEnv": "${localEnv:NO_PROXY}"
@@ -18,7 +18,7 @@
         "HOST_USER": "${localEnv:USER}",
         "APP_PATH": "${containerWorkspaceFolder}"
     },
-    "containerUser": "${localEnv:USER}",
+    // "containerUser": "${localEnv:USER}",
     "features": {
 		"ghcr.io/devcontainers/features/common-utils:2": {
 			"installZsh": true,
@@ -34,12 +34,12 @@
 		"ghcr.io/stuartleeks/dev-container-features/shell-history:0": {}
     },
 
-    "mounts": [
-        "source=/${localEnv:HOME}/.nuget/NuGet/NuGet.Config,target=/home/${localEnv:USER}/.nuget/NuGet/NuGet.Config,type=bind,consistency=cached",
-        "source=/${localEnv:HOME}/.ssh,target=/home/${localEnv:USER}/.ssh,type=bind,consistency=cached",
-        "source=/${localEnv:HOME}/.microsoft/usersecrets,target=/home/${localEnv:USER}/.microsoft/usersecrets,type=bind,consistency=cached",
-        "source=${localWorkspaceFolder}/.devcontainer/atomic.omp.json,target=/home/${localEnv:USER}/.config/atomic.omp.json,type=bind,consistency=cached"
-    ],
+    // "mounts": [
+    //     "source=/${localEnv:HOME}/.nuget/NuGet/NuGet.Config,target=/home/${localEnv:USER}/.nuget/NuGet/NuGet.Config,type=bind,consistency=cached",
+    //     "source=/${localEnv:HOME}/.ssh,target=/home/${localEnv:USER}/.ssh,type=bind,consistency=cached",
+    //     "source=/${localEnv:HOME}/.microsoft/usersecrets,target=/home/${localEnv:USER}/.microsoft/usersecrets,type=bind,consistency=cached",
+    //     "source=${localWorkspaceFolder}/.devcontainer/atomic.omp.json,target=/home/${localEnv:USER}/.config/atomic.omp.json,type=bind,consistency=cached"
+    // ],
     "postStartCommand": "/bin/bash ${containerWorkspaceFolder}/.devcontainer/change-owner.sh",
 
     "customizations": {
