--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -34,12 +34,12 @@
 		"ghcr.io/stuartleeks/dev-container-features/shell-history:0": {}
     },
 
-    // "mounts": [
-    //     "source=/${localEnv:HOME}/.nuget/NuGet/NuGet.Config,target=/home/${localEnv:USER}/.nuget/NuGet/NuGet.Config,type=bind,consistency=cached",
-    //     "source=/${localEnv:HOME}/.ssh,target=/home/${localEnv:USER}/.ssh,type=bind,consistency=cached",
-    //     "source=/${localEnv:HOME}/.microsoft/usersecrets,target=/home/${localEnv:USER}/.microsoft/usersecrets,type=bind,consistency=cached",
+    "mounts": [
+        "source=/${localEnv:HOME}/.nuget/NuGet/NuGet.Config,target=/root/.nuget/NuGet/NuGet.Config,type=bind,consistency=cached",
+        "source=/${localEnv:HOME}/.ssh,target=/root/.ssh,type=bind,consistency=cached",
+        "source=/${localEnv:HOME}/.microsoft/usersecrets,target=/root/.microsoft/usersecrets,type=bind,consistency=cached"
     //     "source=${localWorkspaceFolder}/.devcontainer/atomic.omp.json,target=/home/${localEnv:USER}/.config/atomic.omp.json,type=bind,consistency=cached"
-    // ],
+    ],
     "postStartCommand": "/bin/bash ${containerWorkspaceFolder}/.devcontainer/change-owner.sh",
 
     "customizations": {
