--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -6,67 +6,68 @@
         "args": { 
             "PathApp": "${containerWorkspaceFolder}",
             "NugetMode": "SKIP",
-            // "UserApp": "${localEnv:USER}",
-            // "UserUID": "1000",
-            // "UserGID": "1000",
             "HttpProxyEnv": "${localEnv:HTTP_PROXY}",
             "HttpsProxyEnv": "${localEnv:HTTPS_PROXY}",
             "NoProxyEnv": "${localEnv:NO_PROXY}"
         }
     },
     "remoteEnv": {
-        "HOST_USER": "${localEnv:USER}",
+        "HOST_USER": "${localEnv:USERNAME}",
         "APP_PATH": "${containerWorkspaceFolder}"
-    },
-    // "containerUser": "${localEnv:USER}",
-    "features": {
-		"ghcr.io/devcontainers/features/common-utils:2": {
-			"installZsh": true,
-			"configureZshAsDefaultShell": true,
-			"installOhMyZsh": true,
-			"installOhMyZshConfig": true,
-			"upgradePackages": true
-		},
-		"ghcr.io/devcontainers-contrib/features/zsh-plugins:0": {
-			"plugins": "git git-flow F-Sy-H zsh-autosuggestions zsh-completions",
-			"omzPlugins": "https://github.com/z-shell/F-Sy-H https://github.com/zsh-users/zsh-autosuggestions https://github.com/zsh-users/zsh-completions"
-        },
-		"ghcr.io/stuartleeks/dev-container-features/shell-history:0": {}
     },
 
     "mounts": [
-        "source=/${localEnv:HOME}/.nuget/NuGet/NuGet.Config,target=/root/.nuget/NuGet/NuGet.Config,type=bind,consistency=cached",
-        "source=/${localEnv:HOME}/.ssh,target=/root/.ssh,type=bind,consistency=cached",
-        "source=/${localEnv:HOME}/.microsoft/usersecrets,target=/root/.microsoft/usersecrets,type=bind,consistency=cached"
-    //     "source=${localWorkspaceFolder}/.devcontainer/atomic.omp.json,target=/home/${localEnv:USER}/.config/atomic.omp.json,type=bind,consistency=cached"
-    ],
-    "postStartCommand": "/bin/bash ${containerWorkspaceFolder}/.devcontainer/change-owner.sh",
+		// Se estiver utilizando Linux ou WSL2 desmarque essas linhas
+		// "source=/${localEnv:HOME}/.nuget/NuGet/NuGet.Config,target=/root/.nuget/NuGet/NuGet.Config,type=bind,consistency=cached",
+		// "source=/${localEnv:HOME}/.ssh,target=/root/.ssh,type=bind,consistency=cached",
+		// "source=/${localEnv:HOME}/.microsoft/usersecrets,target=/root/.microsoft/usersecrets,type=bind,consistency=cached"
 
-    "customizations": {
-        "vscode": {
-            "settings": {
-                "terminal.integrated.fontFamily": "MesloLGM NF",
-                "terminal.integrated.defaultProfile.linux": "zsh"
-            },
-            "extensions": [
-                "ms-dotnettools.csharp",
-                "k--kato.docomment",
-                "ms-dotnettools.csdevkit",
-                "eamodio.gitlens",
-                "ecmel.vscode-html-css",
-                "bianxianyang.htmlplay",
-                "VisualStudioExptTeam.vscodeintellicode",
-                "ms-dotnettools.vscodeintellicode-csharp",
-                "ms-vsliveshare.vsliveshare",
-                "yzhang.markdown-all-in-one",
-                "patcx.vscode-nuget-gallery",
-                "quicktype.quicktype",
-                "christian-kohler.path-intellisense",
-                "humao.rest-client",
-                "Shynet.vscode-taskkill",
-                "Gruntfuggly.todo-tree",
-                "ms-vscode-remote.vscode-remote-extensionpack"
-            ]
-        }
-    }
+		// Se estiver usando Windows ou Docker Desktop, desmarque essas linhas
+		"source=${localEnv:HOME}${localEnv:USERPROFILE}\\.docker\\config.json,target=/root/.docker/config.json,type=bind,consistency=cached",
+		"source=${localEnv:APPDATA}\\NuGet\\linux\\NuGet.Config,target=/root/.nuget/NuGet/NuGet.Config,type=bind,consistency=cached",
+		"source=${localEnv:APPDATA}\\Microsoft\\UserSecrets,target=/root/.microsoft/usersecrets,type=bind,consistency=cached"
+    ],
+
+	"containerEnv": {
+		"WORKFOLDER": "${containerWorkspaceFolder}"
+	},
+
+    "postStartCommand": "./.devcontainer/custom-install.sh",
+
+	"customizations": {
+		"vscode": {
+			"settings": {
+				"terminal.integrated.fontFamily": "MesloLGM Nerd Font", // ou "MesloLGM NF"
+				"terminal.integrated.defaultProfile.linux": "zsh"
+			},
+			"extensions": [
+				"ms-vscode-remote.vscode-remote-extensionpack",
+				"ms-dotnettools.vscodeintellicode-csharp",
+				"ms-dotnettools.vscode-dotnet-runtime",
+				"ms-dotnettools.csharp",
+				"ms-azuretools.vscode-docker",
+				"ms-vscode.powershell",
+				"ms-vsliveshare.vsliveshare",
+				"ecmel.vscode-html-css",
+				"bianxianyang.htmlplay",
+				"adrianwilczynski.asp-net-core-snippet-pack",
+				"k--kato.docomment",
+				"EditorConfig.EditorConfig",
+				"yzhang.markdown-all-in-one",
+				"VisualStudioExptTeam.intellicode-api-usage-examples",
+				"christian-kohler.path-intellisense",
+				"Gruntfuggly.todo-tree",
+				"quicktype.quicktype",
+				"eamodio.gitlens",
+				"bierner.markdown-mermaid",
+				"bpruitt-goddard.mermaid-markdown-syntax-highlighting",
+				"patcx.vscode-nuget-gallery",
+				"oracle.sql-developer",
+				"ms-mssql.mssql",
+				"humao.rest-client",
+				"shynet.vscode-taskkill",
+				"dotjoshjohnson.xml"
+			]
+		}
+	}
 }
