--- a/src/Nuuvify.CommonPack.AzureStorage.Abstraction/Nuuvify.CommonPack.AzureStorage.Abstraction.csproj
+++ b/src/Nuuvify.CommonPack.AzureStorage.Abstraction/Nuuvify.CommonPack.AzureStorage.Abstraction.csproj
@@ -4,7 +4,13 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <Description>Azure Blobs Storage - Instalar no projeto de Dominio</Description>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
+    <PackageReleaseNotes>CHANGELOG.md</PackageReleaseNotes>
+    <PackageTags>EntityFramework;EF;EFCore;Database;IBM;DB2</PackageTags>
   </PropertyGroup>
 
- 
+  <ItemGroup>
+    <None Include="README.md" Pack="true" PackagePath="\" />
+    <None Include="CHANGELOG.md" Pack="true" PackagePath="\" />
+  </ItemGroup>
 </Project>
