--- a/src/Nuuvify.CommonPack.EF.Exceptions.Common/Nuuvify.CommonPack.EF.Exceptions.Common.csproj
+++ b/src/Nuuvify.CommonPack.EF.Exceptions.Common/Nuuvify.CommonPack.EF.Exceptions.Common.csproj
@@ -3,17 +3,23 @@
 
     <PropertyGroup>
         <TargetFramework>net8.0</TargetFramework>
-        <PackageTags>EntityFramework EF Exception SqlServer PostgreSQL MySql EntityFrameworkCore
-            entity-framework-core EFCore Data Database</PackageTags>
-        <PackageReleaseNotes>Populate Entries property of the exceptions</PackageReleaseNotes>
         <Description>Handle database errors easily when working with Entity Framework Core. Catch
             specific exceptions such as UniqueConstraintException, CannotInsertNullException,
             MaxLengthExceededException, NumericOverflowException or ReferenceConstraintException
             instead of generic DbUpdateException
 
             This is a base package for database specific packages. Install one of the specific
-            packages instead of this</Description>
+            packages instead of this
+        </Description>
+        <PackageReadmeFile>README.md</PackageReadmeFile>
+        <PackageReleaseNotes>CHANGELOG.md</PackageReleaseNotes>
+        <PackageTags>EntityFramework;EF;EFCore;Database;IBM;DB2</PackageTags>
     </PropertyGroup>
+
+    <ItemGroup>
+        <None Include="README.md" Pack="true" PackagePath="\" />
+        <None Include="CHANGELOG.md" Pack="true" PackagePath="\" />
+    </ItemGroup>
 
     <ItemGroup>
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.7" />
