--- a/src/Nuuvify.CommonPack.Email.Abstraction/Nuuvify.CommonPack.Email.Abstraction.csproj
+++ b/src/Nuuvify.CommonPack.Email.Abstraction/Nuuvify.CommonPack.Email.Abstraction.csproj
@@ -7,8 +7,14 @@
       This library has only abstractions/interfaces and has no external dependencies. <br/>
       Use this library without your domain project without causing external dependencies. 
     </Description>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
+    <PackageReleaseNotes>CHANGELOG.md</PackageReleaseNotes>
+    <PackageTags>Nuuvify</PackageTags>
   </PropertyGroup>
-
+  <ItemGroup>
+    <None Include="README.md" Pack="true" PackagePath="\" />
+    <None Include="CHANGELOG.md" Pack="true" PackagePath="\" />
+  </ItemGroup>
   
   <ItemGroup>
     <ProjectReference Include="..\Nuuvify.CommonPack.Extensions\Nuuvify.CommonPack.Extensions.csproj" />
