--- a/src/Nuuvify.CommonPack.Security.Abstraction/Nuuvify.CommonPack.Security.Abstraction.csproj
+++ b/src/Nuuvify.CommonPack.Security.Abstraction/Nuuvify.CommonPack.Security.Abstraction.csproj
@@ -9,7 +9,15 @@
         Essa biblioteca pode ser instalada em qualquer projeto da sua solução, diferente da 
         biblioteca de Security que deve ser instalada apenas no seu projeto de IoC 
         </Description>
+        <PackageReadmeFile>README.md</PackageReadmeFile>
+        <PackageReleaseNotes>CHANGELOG.md</PackageReleaseNotes>
+        <PackageTags>Security;Jwt;ClaimPrincipalExtensions</PackageTags>
     </PropertyGroup>
+
+    <ItemGroup>
+        <None Include="README.md" Pack="true" PackagePath="\" />
+        <None Include="CHANGELOG.md" Pack="true" PackagePath="\" />
+    </ItemGroup>
 
     <ItemGroup>
         <PackageReference Include="System.ComponentModel.Annotations" Version="5.0.0" />
