--- a/src/Nuuvify.CommonPack.Security.JwtCredentials/Nuuvify.CommonPack.Security.JwtCredentials.csproj
+++ b/src/Nuuvify.CommonPack.Security.JwtCredentials/Nuuvify.CommonPack.Security.JwtCredentials.csproj
@@ -6,6 +6,9 @@
     <Description>
       Gerencia seu JWK e proteção do seu JWT signing
     </Description>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
+    <PackageReleaseNotes>CHANGELOG.md</PackageReleaseNotes>
+    <PackageTags>Nuuvify</PackageTags>
   </PropertyGroup>
 
   <ItemGroup>
@@ -15,7 +18,11 @@
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.0.0" />
   </ItemGroup>
 
-
+  <ItemGroup>
+    <None Include="README.md" Pack="true" PackagePath="\" />
+    <None Include="CHANGELOG.md" Pack="true" PackagePath="\" />
+  </ItemGroup>
+  
   <ItemGroup>
     <ProjectReference Include="..\Nuuvify.CommonPack.Security.Abstraction\Nuuvify.CommonPack.Security.Abstraction.csproj" />
   </ItemGroup>
