--- a/src/Nuuvify.CommonPack.UnitOfWork.Abstraction/Nuuvify.CommonPack.UnitOfWork.Abstraction.csproj
+++ b/src/Nuuvify.CommonPack.UnitOfWork.Abstraction/Nuuvify.CommonPack.UnitOfWork.Abstraction.csproj
@@ -8,8 +8,16 @@
       em qualquer projeto. Porém a biblioteca contendo as implmentações, deve ser instalada
       no seu projeto de Infra.Data 
     </Description>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
+    <PackageReleaseNotes>CHANGELOG.md</PackageReleaseNotes>
+    <PackageTags>Nuuvify</PackageTags>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Include="README.md" Pack="true" PackagePath="\" />
+    <None Include="CHANGELOG.md" Pack="true" PackagePath="\" />
+  </ItemGroup>
+  
   <ItemGroup>
     <ProjectReference Include="..\Nuuvify.CommonPack.Extensions\Nuuvify.CommonPack.Extensions.csproj" />
   </ItemGroup>
