--- a/src/Nuuvify.CommonPack.AutoHistory/Nuuvify.CommonPack.AutoHistory.csproj
+++ b/src/Nuuvify.CommonPack.AutoHistory/Nuuvify.CommonPack.AutoHistory.csproj
@@ -9,6 +9,9 @@
       entidade da aplicação.
       Essa bilioteca deve ser instalada no seu projeto Infra.Data
     </Description>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
+    <PackageReleaseNotes>CHANGELOG.md</PackageReleaseNotes>
+    <PackageTags>Nuuvify</PackageTags>
   </PropertyGroup>
 
   <ItemGroup>
@@ -16,8 +19,12 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference
-      Include="..\Nuuvify.CommonPack.UnitOfWork.Abstraction\Nuuvify.CommonPack.UnitOfWork.Abstraction.csproj" />
+    <ProjectReference Include="..\Nuuvify.CommonPack.UnitOfWork.Abstraction\Nuuvify.CommonPack.UnitOfWork.Abstraction.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="README.md" Pack="true" PackagePath="\" />
+    <None Include="CHANGELOG.md" Pack="true" PackagePath="\" />
   </ItemGroup>
 
   <ItemGroup Label="Packaging">
