--- a/src/Nuuvify.CommonPack.Domain/Nuuvify.CommonPack.Domain.csproj
+++ b/src/Nuuvify.CommonPack.Domain/Nuuvify.CommonPack.Domain.csproj
@@ -4,8 +4,15 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
     <Description>Biblioteca com implementaçôes comuns para projetos DOMAIN</Description>
+    <PackageTags>Mediator;FluentValidator;BrazilClass;ValueObjects</PackageTags>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
+    <PackageReleaseNotes>CHANGELOG.md</PackageReleaseNotes>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Include="README.md" Pack="true" PackagePath="\" />
+    <None Include="CHANGELOG.md" Pack="true" PackagePath="\" />
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="12.0.1" />
