--- a/src/Nuuvify.CommonPack.Middleware.Abstraction/Nuuvify.CommonPack.Middleware.Abstraction.csproj
+++ b/src/Nuuvify.CommonPack.Middleware.Abstraction/Nuuvify.CommonPack.Middleware.Abstraction.csproj
@@ -12,8 +12,16 @@
       RequestConfiguration - Utilizada pelo LOG e também pelo HandlingHeadersMiddleware para criar
       log com contexto
     </Description>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
+    <PackageReleaseNotes>CHANGELOG.md</PackageReleaseNotes>
+    <PackageTags>Nuuvify</PackageTags>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Include="README.md" Pack="true" PackagePath="\" />
+    <None Include="CHANGELOG.md" Pack="true" PackagePath="\" />
+  </ItemGroup>
+  
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="8.0.0" />
   </ItemGroup>
