--- a/src/Nuuvify.CommonPack.OpenApi/Nuuvify.CommonPack.OpenApi.csproj
+++ b/src/Nuuvify.CommonPack.OpenApi/Nuuvify.CommonPack.OpenApi.csproj
@@ -3,22 +3,24 @@
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
-    <PackageReadmeFile>readme.md</PackageReadmeFile>
     <Description>
       Documentação da api através da swagger (OpenApi), deve ser baixado no projeto IoC
     </Description>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
+    <PackageReleaseNotes>CHANGELOG.md</PackageReleaseNotes>
+    <PackageTags>Nuuvify</PackageTags>
   </PropertyGroup>
 
-
+  <ItemGroup>
+    <None Include="README.md" Pack="true" PackagePath="\" />
+    <None Include="CHANGELOG.md" Pack="true" PackagePath="\" />
+  </ItemGroup>
+  
   <ItemGroup>
     <PackageReference Include="Asp.Versioning.Mvc.ApiExplorer" Version="8.1.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
     <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="6.6.2" />
     <PackageReference Include="Swashbuckle.AspNetCore.Filters" Version="8.0.2" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <None Include="readme.md" Pack="true" PackagePath="\" />
   </ItemGroup>
 
 
