--- a/src/Nuuvify.CommonPack.Security.JwtStore.Ef/Nuuvify.CommonPack.Security.JwtStore.Ef.csproj
+++ b/src/Nuuvify.CommonPack.Security.JwtStore.Ef/Nuuvify.CommonPack.Security.JwtStore.Ef.csproj
@@ -9,15 +9,22 @@
             para que seja validado pelos clients.
             Essa biblioteca destinase apenas a aplicação que fornece um token.
         </Description>
+        <PackageReadmeFile>README.md</PackageReadmeFile>
+        <PackageReleaseNotes>CHANGELOG.md</PackageReleaseNotes>
+        <PackageTags>Nuuvify</PackageTags>
     </PropertyGroup>
+
+    <ItemGroup>
+        <None Include="README.md" Pack="true" PackagePath="\" />
+        <None Include="CHANGELOG.md" Pack="true" PackagePath="\" />
+    </ItemGroup>
 
     <ItemGroup>
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.7" />
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference
-            Include="..\Nuuvify.CommonPack.Security.JwtCredentials\Nuuvify.CommonPack.Security.JwtCredentials.csproj" />
+        <ProjectReference Include="..\Nuuvify.CommonPack.Security.JwtCredentials\Nuuvify.CommonPack.Security.JwtCredentials.csproj" />
     </ItemGroup>
 
 
