--- a/src/Nuuvify.CommonPack.Security/Nuuvify.CommonPack.Security.csproj
+++ b/src/Nuuvify.CommonPack.Security/Nuuvify.CommonPack.Security.csproj
@@ -8,8 +8,16 @@
       não contempla OpenId
       que esta em outra Lib
     </Description>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
+    <PackageReleaseNotes>CHANGELOG.md</PackageReleaseNotes>
+    <PackageTags>Nuuvify</PackageTags>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Include="README.md" Pack="true" PackagePath="\" />
+    <None Include="CHANGELOG.md" Pack="true" PackagePath="\" />
+  </ItemGroup>
+  
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Caching.SqlServer" Version="8.0.7" />
     <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="8.0.0" />
