--- a/src/Nuuvify.CommonPack.StandardHttpClient/Nuuvify.CommonPack.StandardHttpClient.csproj
+++ b/src/Nuuvify.CommonPack.StandardHttpClient/Nuuvify.CommonPack.StandardHttpClient.csproj
@@ -12,8 +12,16 @@
       utilize IStandardHttpClient, e deserealize o retorno conforme o fornecedor
       da api pede.
     </Description>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
+    <PackageReleaseNotes>CHANGELOG.md</PackageReleaseNotes>
+    <PackageTags>Nuuvify</PackageTags>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Include="README.md" Pack="true" PackagePath="\" />
+    <None Include="CHANGELOG.md" Pack="true" PackagePath="\" />
+  </ItemGroup>
+  
   <ItemGroup>
     <FrameworkReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="8.0.7" />
