--- a/src/Nuuvify.CommonPack.UnitOfWork/Nuuvify.CommonPack.UnitOfWork.csproj
+++ b/src/Nuuvify.CommonPack.UnitOfWork/Nuuvify.CommonPack.UnitOfWork.csproj
@@ -8,8 +8,16 @@
       implementando metodos de uso basico e comumente utilizado em projetos.
       Deve ser instalada no projeto Infra.IoC
     </Description>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
+    <PackageReleaseNotes>CHANGELOG.md</PackageReleaseNotes>
+    <PackageTags>Nuuvify</PackageTags>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Include="README.md" Pack="true" PackagePath="\" />
+    <None Include="CHANGELOG.md" Pack="true" PackagePath="\" />
+  </ItemGroup>
+  
   <ItemGroup>
     <ProjectReference Include="..\Nuuvify.CommonPack.UnitOfWork.Abstraction\Nuuvify.CommonPack.UnitOfWork.Abstraction.csproj" />
     <ProjectReference Include="..\Nuuvify.CommonPack.AutoHistory\Nuuvify.CommonPack.AutoHistory.csproj" />
