--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -14,13 +14,8 @@
     <PackageProjectUrl>https://github.com/lzocateli/Nuuvify.CommonPack</PackageProjectUrl>
     <PackageIcon>logonuuvify.jpg</PackageIcon>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
-    <!-- Utilise esse padrão para versionamento:
-      1.54.18-preview.123
-      ou
-      1.54.18 (para versão definitiva)
-      -->
-    <Version>3.0.0-preview.1</Version>
-    <FileVersion>22.05.18.1520</FileVersion>
+    <Version>3.0.0</Version>
+    <FileVersion>1520</FileVersion>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <NoWarn>1701;1702;1705;1591</NoWarn>
     <DocumentationFile>Docs\$(MSBuildProjectName).xml</DocumentationFile>
