--- a/src/Nuuvify.CommonPack.Extensions/Nuuvify.CommonPack.Extensions.csproj
+++ b/src/Nuuvify.CommonPack.Extensions/Nuuvify.CommonPack.Extensions.csproj
@@ -5,7 +5,8 @@
     <TargetFramework>netstandard2.0</TargetFramework>
     <Description> This library implements Notification Pattern, which allows passing notifications
       between projects. <br /> Here there are also several extension methods that help handle null
-      lists, special characters in strings, <br /> among other useful things. </Description>
+      lists, special characters in strings, <br /> among other useful things.
+    </Description>
     <PackageReadmeFile>README.md</PackageReadmeFile>
     <PackageReleaseNotes>CHANGELOG.md</PackageReleaseNotes>
     <PackageTags>Nuuvify</PackageTags>
@@ -14,7 +15,7 @@
     <None Include="README.md" Pack="true" PackagePath="\" />
     <None Include="CHANGELOG.md" Pack="true" PackagePath="\" />
   </ItemGroup>
-  
+
   <ItemGroup>
     <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
     <PackageReference Include="System.ComponentModel.Annotations" Version="5.0.0" />
