--- a/src/Nuuvify.CommonPack.Extensions.Brazil/Nuuvify.CommonPack.Extensions.Brazil.csproj
+++ b/src/Nuuvify.CommonPack.Extensions.Brazil/Nuuvify.CommonPack.Extensions.Brazil.csproj
@@ -19,6 +19,7 @@
 
     <ItemGroup>
         <ProjectReference Include="..\Nuuvify.CommonPack.Mediator\Nuuvify.CommonPack.Mediator.csproj" />
+        <ProjectReference Include="..\Nuuvify.CommonPack.Extensions\Nuuvify.CommonPack.Extensions.csproj" />
     </ItemGroup>
 
     <ItemGroup>
