--- a/src/Nuuvify.CommonPack.StandardHttpClient/Nuuvify.CommonPack.StandardHttpClient.csproj
+++ b/src/Nuuvify.CommonPack.StandardHttpClient/Nuuvify.CommonPack.StandardHttpClient.csproj
@@ -29,8 +29,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Nuuvify.CommonPack.Security.Abstraction\Nuuvify.CommonPack.Security.Abstraction.csproj" />
-    <ProjectReference Include="..\Nuuvify.CommonPack.Mediator\Nuuvify.CommonPack.Mediator.csproj" />
+    <ProjectReference Include="../Nuuvify.CommonPack.Security.Abstraction/Nuuvify.CommonPack.Security.Abstraction.csproj" />
+    <ProjectReference Include="../Nuuvify.CommonPack.Mediator/Nuuvify.CommonPack.Mediator.csproj" />
   </ItemGroup>
 
 </Project>
