--- a/test/Nuuvify.CommonPack.Domain.xTest/Nuuvify.CommonPack.Domain.xTest.csproj
+++ b/test/Nuuvify.CommonPack.Domain.xTest/Nuuvify.CommonPack.Domain.xTest.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\src\Nuuvify.CommonPack.Mediator\Nuuvify.CommonPack.Mediator.csproj" />
+    <ProjectReference Include="..\..\src\Nuuvify.CommonPack.Extensions\Nuuvify.CommonPack.Extensions.csproj" />
     <ProjectReference Include="..\..\src\Nuuvify.CommonPack.Extensions.Brazil\Nuuvify.CommonPack.Extensions.Brazil.csproj" />
     <ProjectReference Include="..\..\src\Nuuvify.CommonPack.Domain\Nuuvify.CommonPack.Domain.csproj" />
     <ProjectReference Include="..\..\src\Nuuvify.CommonPack.Security.Abstraction\Nuuvify.CommonPack.Security.Abstraction.csproj" />
