--- a/src/Nuuvify.CommonPack.Email/Nuuvify.CommonPack.Email.csproj
+++ b/src/Nuuvify.CommonPack.Email/Nuuvify.CommonPack.Email.csproj
@@ -3,20 +3,18 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
-    <Description> This library is an abstraction for emailing. <br />
- Add to an INFRA project, and
-      use the IEmail interface of the EMAIL.ABSTRACTION project <br />
- to consume the service in
+    <Description> This library is an abstraction for emailing. Add to an INFRA project, and
+      use the IEmail interface of the EMAIL.ABSTRACTION project to consume the service in
       other layers.
   </Description>
   <PackageReadmeFile>README.md</PackageReadmeFile>
-  <releaseNotes>release-notes.md</releaseNotes>
+  <PackageReleaseNotes>$(ReleaseNotes)</PackageReleaseNotes>
   <PackageTags>Nuuvify</PackageTags>
 </PropertyGroup>
 
 <ItemGroup>
   <None Include="README.md" Pack="true" PackagePath="\" />
-  <None Include="release-notes.md" Pack="true" PackagePath="\" />
+  <None Include="CHANGELOG.md" Pack="true" PackagePath="\" />
 </ItemGroup>
 
 <ItemGroup>
@@ -27,5 +25,21 @@
 <ItemGroup>
   <ProjectReference Include="..\Nuuvify.CommonPack.Email.Abstraction\Nuuvify.CommonPack.Email.Abstraction.csproj" />
 </ItemGroup>
+
+
+  <Target Name="UpdateReleaseNotes" BeforeTargets="Pack">
+    <ReadLinesFromFile File="CHANGELOG.md">
+      <Output TaskParameter="Lines" ItemName="ReleaseNotesContent"/>
+    </ReadLinesFromFile>
+    <PropertyGroup>
+      <ReleaseNotes>%(ReleaseNotesContent.Identity)</ReleaseNotes>
+    </PropertyGroup>
+    <ItemGroup>
+      <NuspecProperties Include="PackageReleaseNotes">
+        <Value>$(ReleaseNotes)</Value>
+      </NuspecProperties>
+    </ItemGroup>
+  </Target>
+
 
 </Project>
