--- a/src/Nuuvify.CommonPack.Email/Nuuvify.CommonPack.Email.csproj
+++ b/src/Nuuvify.CommonPack.Email/Nuuvify.CommonPack.Email.csproj
@@ -6,39 +6,32 @@
     <Description> This library is an abstraction for emailing. Add to an INFRA project, and
       use the IEmail interface of the EMAIL.ABSTRACTION project to consume the service in
       other layers.
-  </Description>
-  <PackageReadmeFile>README.md</PackageReadmeFile>
-  <PackageReleaseNotes>$(PackageReleaseNotes)</PackageReleaseNotes>
-  <PackageTags>Nuuvify</PackageTags>
-</PropertyGroup>
+    </Description>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
+    <PackageTags>Nuuvify</PackageTags>
+  </PropertyGroup>
 
-<ItemGroup>
-  <None Include="README.md" Pack="true" PackagePath="\" />
-  <None Include="CHANGELOG.md" Pack="true" PackagePath="\" />
-</ItemGroup>
+  <ItemGroup>
+    <None Include="README.md" Pack="true" PackagePath="\" />
+    <None Include="CHANGELOG.md" Pack="true" PackagePath="\" />
+  </ItemGroup>
 
-<ItemGroup>
-  <PackageReference Include="MailKit" Version="4.7.1.1" />
-  <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="8.0.0" />
-</ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="MailKit" Version="4.7.1.1" />
+    <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="8.0.0" />
+  </ItemGroup>
 
-<ItemGroup>
-  <ProjectReference Include="..\Nuuvify.CommonPack.Email.Abstraction\Nuuvify.CommonPack.Email.Abstraction.csproj" />
-</ItemGroup>
-
+  <ItemGroup>
+    <ProjectReference Include="..\Nuuvify.CommonPack.Email.Abstraction\Nuuvify.CommonPack.Email.Abstraction.csproj" />
+  </ItemGroup>
 
   <Target Name="UpdateReleaseNotes" BeforeTargets="Pack">
     <ReadLinesFromFile File="CHANGELOG.md">
       <Output TaskParameter="Lines" ItemName="ReleaseNotesContent"/>
     </ReadLinesFromFile>
     <PropertyGroup>
-      <PackageReleaseNotes>%(ReleaseNotesContent.Identity)</PackageReleaseNotes>
+      <ReleaseNotes>%(ReleaseNotesContent.Identity)</ReleaseNotes>
     </PropertyGroup>
-    <ItemGroup>
-      <NuspecProperties Include="PackageReleaseNotes">
-        <Value>$(PackageReleaseNotes)</Value>
-      </NuspecProperties>
-    </ItemGroup>
   </Target>
 
 </Project>
