--- a/src/Nuuvify.CommonPack.Email/Nuuvify.CommonPack.Email.csproj
+++ b/src/Nuuvify.CommonPack.Email/Nuuvify.CommonPack.Email.csproj
@@ -8,7 +8,7 @@
       other layers.
     </Description>
     <PackageReadmeFile>README.md</PackageReadmeFile>
-    <ReleaseNotes>$(ReleaseNotes)</ReleaseNotes>
+    <PackageReleaseNotes>$(PackageReleaseNotes)</PackageReleaseNotes>
     <PackageTags>Nuuvify</PackageTags>
   </PropertyGroup>
 
@@ -31,7 +31,7 @@
       <Output TaskParameter="Lines" ItemName="ReleaseNotesContent"/>
     </ReadLinesFromFile>
     <PropertyGroup>
-      <ReleaseNotes>%(ReleaseNotesContent.Identity)</ReleaseNotes>
+      <PackageReleaseNotes>%(ReleaseNotesContent.Identity)</PackageReleaseNotes>
     </PropertyGroup>
   </Target>
 
