--- a/src/Nuuvify.CommonPack.Email/Nuuvify.CommonPack.Email.csproj
+++ b/src/Nuuvify.CommonPack.Email/Nuuvify.CommonPack.Email.csproj
@@ -1,31 +1,36 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
-    <Description> This library is an abstraction for emailing. <br />
- Add to an INFRA project, and
-      use the IEmail interface of the EMAIL.ABSTRACTION project <br />
- to consume the service in
+    <Description> This library is an abstraction for emailing. Add to an INFRA project, and
+      use the IEmail interface of the EMAIL.ABSTRACTION project to consume the service in
       other layers.
-  </Description>
-  <PackageReadmeFile>README.md</PackageReadmeFile>
-  <PackageReleaseNotes>CHANGELOG.md</PackageReleaseNotes>
-  <PackageTags>Nuuvify</PackageTags>
-</PropertyGroup>
+    </Description>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
+    <PackageTags>Nuuvify</PackageTags>
+  </PropertyGroup>
 
-<ItemGroup>
-  <None Include="README.md" Pack="true" PackagePath="\" />
-  <None Include="CHANGELOG.md" Pack="true" PackagePath="\" />
-</ItemGroup>
+  <ItemGroup>
+    <None Include="README.md" Pack="true" PackagePath="\" />
+    <None Include="CHANGELOG.md" Pack="true" PackagePath="\" />
+  </ItemGroup>
 
-<ItemGroup>
-  <PackageReference Include="MailKit" Version="4.7.1.1" />
-  <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="8.0.0" />
-</ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="MailKit" Version="4.7.1.1" />
+    <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="8.0.0" />
+  </ItemGroup>
 
-<ItemGroup>
-  <ProjectReference Include="..\Nuuvify.CommonPack.Email.Abstraction\Nuuvify.CommonPack.Email.Abstraction.csproj" />
-</ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Nuuvify.CommonPack.Email.Abstraction\Nuuvify.CommonPack.Email.Abstraction.csproj" />
+  </ItemGroup>
+
+  <Target Name="UpdateReleaseNotes" BeforeTargets="Pack">
+    <ReadLinesFromFile File="CHANGELOG.md">
+      <Output TaskParameter="Lines" ItemName="ReleaseNotesContent"/>
+    </ReadLinesFromFile>
+    <PropertyGroup>
+      <ReleaseNotes>%(ReleaseNotesContent.Identity)</ReleaseNotes>
+    </PropertyGroup>
+  </Target>
 
 </Project>
