Refactor: devcontainer setup and configuration
- Updated .devcontainer/atomic.omp.json for improved prompt styling and organization.
- Added change-owner.sh script to adjust ownership of mounted directories.
- Removed outdated custom-install.sh script.
- Modified devcontainer.json to streamline environment variables and commands.
- Introduced start-dev.sh script for initial setup of oh-my-posh and zsh configuration.
- Cleaned up husky pre-commit hooks and task-runner.json for better task management.
- Corrected .vscode/settings.json to reference the correct solution name.
- Updated .vscode/tasks.json for consistency in build tasks.
- Revised Readme.md for clarity in build status section.
- Simplified pull_request_template.md by removing redundant checks and instructions.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-    "dotnet.defaultSolution": "Nuuvify.CommonPack.sln",
+    "dotnet.defaultSolution": "Nuuvify.Commonpack.sln",
     "todo-tree.highlights.defaultHighlight": {
         "icon": "alert",
         "type": "line",
